# RallyCore

./: .gitignore  .gitmodules  PP_TUNING_GUIDE.md  README.md  development_data.md  install.md  temp_patch.txt
preprocess_script/: pcd2girdMap.py  relocalize.sh  requirements.txt  save_map.sh
src/ackermann_mux/: CMakeLists.txt
src/ackermann_mux/scripts/: joystick_control.py  joystick_control_v2.py
src/f1tenth_system/: setup.py
src/f1tenth_system/launch/: base.launch.py  base_orin_bringup.launch.py  base_orin_livox.launch.py  base_orin_livox.launch_no_tf.py  base_orin_livox_bringup.launch.py  base_orin_livox_bringup_v2.launch.py  base_orin_livox_bringup_v3.launch.py  base_orin_livox_localizer.launch.py  base_orin_livox_localizer_2dlaser_cmd.launch.py  base_orin_livox_mapping.launch.py  base_orin_livox_mapping_v2.launch.py  base_orin_livox_no_joystick.launch.py  base_orin_ltme.launch.py  calib_launch.py  nav.launch.py  pc2laser.launch.py
src/f1tenth_system/params/: MID360_config.json  PJ.xml  calib_config.yaml  current.xml  ekf.yaml  lio.yaml  localizer.yaml  mid360.yaml  nav.yaml  pointlio.yaml  pointlio_localizer.yaml  vesc.yaml
src/f1tenth_system/rviz/: nav.rviz  pp.rviz  tf_check.rviz
src/f1tenth_system/scripts/: README.md  README_EN.md  analyze_pp_bag.py  current_acc_calib.py  extract_rosbag_data.py  manual_steer_current_sweep_stages.py  manual_steer_speed_stages.py  plot_steering_scale.py  pp_current_acc_calib.py  pp_param_tuner.py  process_calib_data.py  speed_hold_current_logger.py  speed_interval_accel_sweep.py  test_calib_components.py
src/f1tenth_system/scripts/readme/: DEPLOYMENT_GUIDE.md  PHASE2_GUIDE.md  README.md  TECHNICAL_GUIDE.md
src/mapping/arps_lidar_inertial_odometry/: CMakeLists.txt  package.xml
src/mapping/arps_lidar_inertial_odometry/config/: mid360.yaml
src/mapping/arps_lidar_inertial_odometry/include/arps/: color.h  imuProcessing.h  lidarMapping.h  preProcess.h  utility.h
src/mapping/arps_lidar_inertial_odometry/launch/: livox_mid360.xml  mapping.xml
src/mapping/arps_lidar_inertial_odometry/rviz_cfg/: lio.rviz
src/mapping/arps_lidar_inertial_odometry/src/: imuProcessing.cpp  lidarMapping.cpp  lidarMapping_node.cpp  preProcess.cpp  publish_keyframe.cpp
src/planner/gogo_planner/config/: params.yaml
src/planner/gogo_planner/planner/: CMakeLists.txt  Makefile  cmake_install.cmake  setup.py
src/planner/gogo_planner/planner/cmake_example.egg-info/: PKG-INFO
src/planner/gogo_planner/planner/include/: grid_map.h
src/planner/gogo_planner/planner/include/utils/: se2traj.hpp
src/planner/gogo_planner/planner/src/: penal_traj_opt.cpp
src/planner/gogo_planner/python/: f_sgp_bgk.py  planner_node.py  test.py
src/planner/gogo_planner/python/traversability_lib/: choose_point.py  point_cloud_tool.py  sgp_model.py  traversability.py  traversability_no_bgk.py
src/vesc/vesc_ackermann/include/vesc_ackermann/: ackermann_to_vesc.hpp
src/vesc/vesc_ackermann/src/: ackermann_to_vesc.cpp
